--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
+    "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.14"
