--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.1",
     "match-sorter": "^8.1.0",
+    "notiflix": "^3.2.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
